# dngscan

./: .gitignore  CMakeLists.txt  CPP_KERNEL_PLAN.md  GUARDRAILS_PLAN.md  NOTICE.md  PROGRESS.md  README.md  README.zh-CN.md  TODO.md  dngscan.py  dngscan_gui.py  pyproject.toml  requirements-calibration.txt  requirements.txt
cpp/: CMakeLists.txt
cpp/include/dngscan_fast/: agx_core.h
cpp/src/: agx_core.cpp  bindings.cpp
dngscan/: __init__.py  __main__.py  _deps.py  _fast.py  agx.py  analysis.py  auto_ev.py  cli.py  color.py  constants.py  core.py  debug_util.py  display_filter.py  drt.py  export.py  fast_plan.py  gated_drt.py  grade.py  gui.py  guidance.py  log_encode.py  look.py  lum.py  lut_io.py  metadata.py  models.py  neutral.py  plot.py  priors.py  punch.py  raw_io.py  render.py  report.py  retreat.py  scene_transform.py  scene_transform_presets.json  tone.py
dngscan_assets/: README.md  TONY_LICENSE-MIT.md
test_output/: compare_results.json  run_compare.py
tests/: golden_support.py  test_agx_curve.py  test_auto_ev.py  test_calibrate_csv.py  test_color_geometry.py  test_debug_util.py  test_display_filter.py  test_drt.py  test_drt_scan.py  test_fast_backend.py  test_gated_drt.py  test_golden_render.py  test_grade.py  test_gui_export.py  test_guidance.py  test_look.py  test_lum_core.py  test_metadata.py  test_preview_cache.py  test_punch.py  test_raw_clip_masks.py  test_render_defaults.py  test_roi_regression.py  test_scene_transform.py  test_stream_render.py  test_tone_core_neutral.py
tools/: benchmark_fast_backend.py  build_native.sh  extract_arri_look.py  (+4 more)
(+130 files in other folders)
