[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "dngscan"
version = "0.1.0"
description = "RAW scan and AgX render pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "numpy>=1.24",
    "rawpy>=0.18",
    "matplotlib>=3.6",
    "pillow>=9.2",
]

[project.optional-dependencies]
native = ["pybind11>=2.11"]
calibration = ["colour-science>=0.4.4"]
gui = ["pyobjc-framework-Quartz>=12.0; platform_system == 'Darwin'"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dngscan*"]

[tool.scikit-build]
cmake.version = ">=3.18"
wheel.packages = ["dngscan"]
build-dir = "build/{wheel_tag}"

[tool.scikit-build.cmake.define]
DNGSCAN_BUILD_NATIVE = "OFF"
